# GtkPlot

./: .anjuta_sym_db.db  AUTHORS  AUTHORS~  Makefile  Makefile.am  Makefile.in  aclocal.m4  config.h  config.status  configure  configure.ac  libtool
.anjuta/: default.profile
.anjuta/session/: anjuta.session  dock-layout.xml
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
src/: Makefile  Makefile.am  Makefile.am~  Makefile.in  gtk-plot.c  gtk-plot.c~  gtk-plot.h  gtk-plot.h~  gtkplot  main.c  main.c~
src/.deps/: gtk-plot.Po  main.Po
